tests/ui/layout/layout-cycle.stderr
error[E0391]: cycle detected when computing layout of `S<S<()>>`
   |
   = note: ...which requires computing layout of `<S<()> as Tr>::I`...
   = note: ...which again requires computing layout of `S<S<()>>`, completing the cycle
note: cycle used when finalizing codegen MIR for `core::mem::size_of::<S<S<()>>>`
  --> $SRC_DIR/core/src/mem/mod.rs:LL:COL
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

note: the above error was encountered while instantiating `fn std::mem::size_of::<S<S<()>>>`
  --> $DIR/layout-cycle.rs:25:5
   |
LL |     mem::size_of::<S<T>>()
   |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
